--- a/FeedbackAppV3.0/FeedbackAppV3.0.csproj
+++ b/FeedbackAppV3.0/FeedbackAppV3.0.csproj
@@ -33,9 +33,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AESEncryptor">
-      <HintPath>..\..\AESEncryptor\AESEncryptor\bin\Release\AESEncryptor.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -49,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Crypto.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
