--- a/FeedbackAppV3.0/FeedbackAppV3.0.csproj
+++ b/FeedbackAppV3.0/FeedbackAppV3.0.csproj
@@ -43,6 +43,7 @@
       <HintPath>..\..\..\..\..\..\Program Files\Microsoft SQL Server\140\SDK\Assemblies\Microsoft.SqlServer.Smo.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
